# actix-web-auth-template

./: .gitignore  Cargo.toml  README.md
migrations/2023-01-18-170308_create_users/: up.sql
src/: actions.rs  auth.rs  main.rs  models.rs  schema.rs  views.rs
