[package]
name = "actix-web-auth-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bcrypt = "0.13"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
dotenvy = "0.15.6"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jwt-simple = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }

